Set Pages & Added BTN background
Added a button background to the programming projects button. Also have set the amount of pages I want in relation to the buttons in index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2317,9 +2317,12 @@ input, select, textarea {
 		position: relative;
 	}
 
-		.image img {
+		.image img, .image video {
 			border-radius: 4px;
 			display: block;
+			width: 100%; /* Ensures images and videos fill the container */
+			height: auto;
+			object-fit: cover; /* Ensures the video fits well */
 		}
 
 		.image.left, .image.right {
