--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2709,7 +2709,7 @@ input, select, textarea {
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #f2849e;
+				background-color: rgba(0, 0, 0, 0.5);
 			}
 
 			.tiles article.style2 > .image:before {
