Youtube video now functional
YouTube video is now functional. Now need to format the game project pages to my liking

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3330,3 +3330,11 @@ input, select, textarea {
 			}
 
 		}
+
+.video-container {
+	display: flex;
+	justify-content: left;
+	align-items: left;
+	height: 60vh; /* Optional: Adjusts height to fill the screen */
+	margin-bottom: 30px;
+}
