--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3332,9 +3332,18 @@ input, select, textarea {
 		}
 
 .video-container {
-	display: flex;
-	justify-content: left;
-	align-items: left;
-	height: 60vh; /* Optional: Adjusts height to fill the screen */
-	margin-bottom: 30px;
+	position: relative;
+	width: 100%;
+	max-width: 1120px; 
+	height: 0;
+	padding-top: 56.25%; 
+	margin: 0 auto; 
 }
+
+	.video-container iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
