--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3333,11 +3333,11 @@ input, select, textarea {
 
 .video-container {
 	position: relative;
-	width: 100%;
-	max-width: 1120px; 
 	height: 0;
-	padding-top: 56.25%; 
-	margin: 0 auto; 
+	width: 100%;
+	max-width: 1120px;
+	padding-top: 56.25%;
+	margin: 0 auto;
 }
 
 	.video-container iframe {
@@ -3346,4 +3346,33 @@ input, select, textarea {
 		left: 0;
 		width: 100%;
 		height: 100%;
+	}
+
+.project-container {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	max-width: 1120px;
+	margin: 0 auto;
+}
+
+	.left-container, .right-container {
+		width: 48%;
+		margin-top: 20px;
+		margin-bottom: 40px;
+		padding: 20px;
+		border-radius: 8px;
+		background-color: #e0e0e0;
+	}
+	
+	@media (max-width: 768px) {
+		.main-container {
+			flex-direction: column; 
+		}
+
+			.left-container, .right-container {
+				width: 100%;
+				margin-bottom: 20px;
+				border-radius: 8px;
+			}
 	}
