--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #ffffff;
+		background: #121212;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -116,7 +116,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: #585858;
+		color: #ffffff;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -3169,7 +3169,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 5em 0 6em 0 ;
-		background-color: #f6f6f6;
+		background-color: #121212;
 	}
 
 		#footer > .inner {
@@ -3362,7 +3362,8 @@ input, select, textarea {
 		margin-bottom: 40px;
 		padding: 20px;
 		border-radius: 8px;
-		background-color: #e0e0e0;
+		background-color: #6a6a6a;
+		text-align: center;
 	}
 	
 	@media (max-width: 768px) {
