Abyssal Dread About added
Started the description of the Abyssal Dread Project

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3367,7 +3367,7 @@ input, select, textarea {
 	}
 	
 	@media (max-width: 768px) {
-		.main-container {
+		.project-container {
 			flex-direction: column; 
 		}
 
