--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3377,3 +3377,36 @@ input, select, textarea {
 				border-radius: 8px;
 			}
 	}
+
+.dropdown {
+	margin-bottom: 20px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+	.dropdown summary {
+		cursor: pointer;
+		font-size: 16px;
+		font-weight: bold;
+		background-color: #444;
+		color: white;
+		padding: 10px 20px;
+		border-radius: 6px;
+		user-select: none;
+		transition: background-color 0.2s ease;
+	}
+
+		.dropdown summary:hover {
+			background-color: #666;
+		}
+
+	.dropdown video {
+		width: 100%;
+		max-width: 100%;
+		margin-top: 10px;
+		border-radius: 8px;
+		display: block;
+	}
+
+	
