--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3472,29 +3472,53 @@ input, select, textarea {
 			background-color: #9b9443;
 		}
 
-	.project-info {
-		display: flex;
-		flex-direction: column;
-		gap: 12px;
-		margin-top: 20px;
-		text-align: left;
+.project-info {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+	margin-top: 20px;
+	text-align: left;
+}
+
+.info-item {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	color: #fff;
+	background-color: #555;
+	padding: 10px 14px;
+	border-radius: 6px;
+	font-size: 16px;
+}
+
+	.info-item i {
+		font-size: 18px;
+		color: #e0e0e0;
 	}
 
-	.info-item {
-		display: flex;
-		align-items: center;
-		gap: 10px;
-		color: #fff;
-		background-color: #555;
-		padding: 10px 14px;
-		border-radius: 6px;
-		font-size: 16px;
+.download-box {
+	display: flex;
+	align-items: center;
+	justify-content: center; 
+	margin: 5px 20px 0px 20px;
+	color: #fff;
+	background-color: #b22222; 
+	padding: 10px 14px;
+	border-radius: 6px;
+	font-size: 16px;
+	text-decoration: none;
+	gap: 8px; 
+	transition: background-color 0.2s ease;
+}
+
+	.download-box:hover {
+		background-color: #d32f2f;
+		cursor: pointer;
 	}
 
-		.info-item i {
-			font-size: 18px;
-			color: #e0e0e0;
-		}
+	.download-box i {
+		font-size: 18px;
+	}
 
 
 	
