--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3480,6 +3480,16 @@ input, select, textarea {
 			background-color: #9b9443;
 		}
 
+
+	.text-dropdown p {
+		margin-bottom: 0px;
+		box-sizing: border-box;
+		background-color: #797546;
+		border-radius: 6px;
+		border: 4px solid #8a7f01;
+		width: 100%;
+	}
+
 .project-info {
 	display: flex;
 	flex-direction: column;
