Lifetide box added to project page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2773,12 +2773,12 @@ input, select, textarea {
 		@media screen and (max-width: 1280px) {
 
 			.tiles {
-				margin: -1.25em 0 0 -1.25em;
+				margin: -1.25em 0 3em -1.25em;
 			}
 
 				.tiles article {
 					width: calc(33.33333% - 1.25em);
-					margin: 1.25em 0 0 1.25em;
+					margin: 1.25em 0 3em 1.25em;
 				}
 
 		}
@@ -3619,4 +3619,9 @@ input, select, textarea {
 		flex: 1 1 100%;
 	}
 }
+
+.subSection {
+		margin-top: 1.5rem;
+}
+
 	
